# python-project-process

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
data/: invalid_sales_data.xlsx  sales_data.xlsx
docs/: index.md
src/: app.py  backend.py  contracts.py  database.py  frontend.py  logs.py  models.py
src/utils/: fake_sales.py  models.py
tests/: contract_test.py  functional_test.py  test_dump.py
tests/integration_tests/: db_test.py
tests/unit_tests/: contract_test.py
