[project]
name = "python-project-process"
version = "0.1.0"
description = ""
authors = [
    {name = "Juan Veronez",email = "juan.monteirov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "streamlit (>=1.42.0,<2.0.0)",
    "selenium (>=4.28.1,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "streamlit run src/app.py"
lint = "isort . && blue ."
test = "python -m pytest -v "
doc = "mkdocs serve"
